# WiLD_Align

./: .gitmodules  CMakeLists.txt  README.md  package.xml
include/: RigidAlignment.h  Scancontext.h  TrajectoryEstimator.h  keyframeContainer.h
include/pcm/: global_map.h
include/pcm/robot_measurements/: robot_measurements.h
launch/: robot2.launch
launch/include/: nodes.launch
launch/include/config/: rviz.rviz
msg/: keyframe.msg
scripts/: build_all.sh  build_all_test.sh  launch.sh  launch_test.sh
src/: RigidAlignment.cpp  TrajectoryEstimator.cpp  interOptimization.cpp  rangeModule.cpp
src/pairwise_consistency_maximization/global_map/: global_map.cpp
src/pairwise_consistency_maximization/pairwise_consistency/: pairwise_consistency.cpp
src/pairwise_consistency_maximization/third_parties/fast_max-clique_finder/src/: findCliqueHeu.cpp
src/test_coms/src/TestComs/: CMakeLists.txt  package.xml
src/test_coms/src/TestComs/include/: utility.h
src/test_coms/src/TestComs/launch/: run.launch
src/test_coms/src/TestComs/src/: coms.cpp
src/wild_align/src/WiLD_Align/: CMakeLists.txt  package.xml
src/wild_align/src/WiLD_Align/config/: params.yaml  robot1.yaml  robot2.yaml
src/wild_align/src/WiLD_Align/include/: params.h  pcmProcessing.h  rangeModule.h  tictoc.h
src/wild_align/src/WiLD_Align/include/pairwise_consistency_maximization/pairwise_consistency/: pairwise_consistency.h
src/wild_align/src/WiLD_Align/include/pcm/graph_utils/: graph_types.h  graph_utils_functions.h
src/wild_align/src/WiLD_Align/include/pcm/robot_measurements/: robot_local_map.h
src/wild_align/src/WiLD_Align/launch/: robot1.launch  robot2.launch  run.launch
src/wild_align/src/WiLD_Align/launch/include/: rviz.launch  rvizR1.launch  rvizR2.launch
src/wild_align/src/WiLD_Align/launch/include/config/: rviz.rviz  rvizR1.rviz  rvizR2.rviz
src/wild_align/src/WiLD_Align/logs/: consistency_matrix.clq.mtx  consistent_loop_closures.txt
src/wild_align/src/WiLD_Align/msg/: keyFrame.msg
src/wild_align/src/WiLD_Align/src/: Scancontext.cpp  interOptimization.cpp  keyframeContainer.cpp  pcmProcessing.cpp  rangeModule.cpp
src/wild_align/src/WiLD_Align/src/pairwise_consistency_maximization/global_map/: global_map.cpp
src/wild_msgs/src/WiLD_msg/: package.xml
